# Reverse-Proxy

./: CMakeLists.txt  README.md
release/: config.json  proxy
release/log/: log.txt
src/: main.cpp
src/balancer/: balancer.cpp  balancer.h
src/components/boost/lib/: libboost_atomic.so.1.86.0  libboost_charconv.so.1.86.0  libboost_chrono.so.1.86.0  libboost_container.so.1.86.0  libboost_context.so.1.86.0  libboost_contract.so.1.86.0  libboost_coroutine.so.1.86.0  libboost_date_time.so.1.86.0  libboost_fiber.so.1.86.0  libboost_filesystem.so.1.86.0  libboost_graph.so.1.86.0  libboost_iostreams.so.1.86.0  libboost_json.so.1.86.0  libboost_locale.so.1.86.0  libboost_log.so.1.86.0  libboost_log_setup.so.1.86.0  libboost_math_c99.so.1.86.0  libboost_math_c99f.so.1.86.0  libboost_math_c99l.so.1.86.0  libboost_math_tr1.so.1.86.0  libboost_math_tr1f.so.1.86.0  libboost_math_tr1l.so.1.86.0  libboost_nowide.so.1.86.0  libboost_prg_exec_monitor.so.1.86.0  libboost_process.so.1.86.0  libboost_program_options.so.1.86.0  libboost_random.so.1.86.0  libboost_regex.so.1.86.0  libboost_serialization.so.1.86.0  libboost_stacktrace_addr2line.so.1.86.0  libboost_stacktrace_basic.so.1.86.0  (+10 more)
src/config/: config.h
src/logger/: logger.cpp  logger.h
src/model/: model.h
src/net/request/: request.cpp  request.h
src/net/server/: server.cpp  server.h
src/router/: router.cpp  router.h
src/router/handlers/: handlers.h
src/service/: service.cpp  service.h
src/service/auth/: auth.cpp
unit-test/: go.mod
unit-test/src/cmd/: main.go
unit-test/src/router/: router.go
(+131 files in other folders)
